plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.2'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.kenanpalmer'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	// Spring Boot Starter Web (for REST API)
	implementation 'org.springframework.boot:spring-boot-starter-web'

	// Spring Boot Starter Security (for authentication)
	implementation 'org.springframework.boot:spring-boot-starter-security'

	// Spring Boot Starter Data JPA (for database interactions)
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

	// H2 Database (for development/testing)
	runtimeOnly 'com.h2database:h2'

	// PostgreSQL (for production)
	runtimeOnly 'org.postgresql:postgresql'

	// Thymeleaf (for frontend, optional)
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'

	// Lombok (to reduce boilerplate code)
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	// Spring Boot Starter Test (for unit tests)
	testImplementation 'org.springframework.boot:spring-boot-starter-test'

	// Spring Security Test (for authentication testing)
	testImplementation 'org.springframework.security:spring-security-test'

	implementation 'org.springframework.boot:spring-boot-starter-validation'

	//test frameworks including JUnit 5, Mockito and AssertJ
	testImplementation 'org.springframework.boot:spring-boot-starter-test' // Includes JUnit 5, Mockito, and AssertJ
	testImplementation 'org.junit.jupiter:junit-jupiter'
}

tasks.named('test') {
	useJUnitPlatform()
}
